WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
210188
[macOS] Crash under WebKit::SandboxExtension::consume
https://bugs.webkit.org/show_bug.cgi?id=210188
Summary
[macOS] Crash under WebKit::SandboxExtension::consume
Per Arne Vollan
Reported
2020-04-08 08:37:28 PDT
When issuing a mach lookup extension to the database mapping service in the UI process fails, the WebContent process will crash when trying to consume the extension.
Attachments
Patch
(2.37 KB, patch)
2020-04-08 08:41 PDT
,
Per Arne Vollan
ggaren
: review+
ews-feeder
: commit-queue-
Details
Formatted Diff
Diff
Patch
(4.72 KB, patch)
2020-04-08 12:51 PDT
,
Per Arne Vollan
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2020-04-08 08:37:46 PDT
rdar://problem/61360674
Per Arne Vollan
Comment 2
2020-04-08 08:41:36 PDT
Created
attachment 395814
[details]
Patch
Geoffrey Garen
Comment 3
2020-04-08 09:30:47 PDT
Comment on
attachment 395814
[details]
Patch r=me
Per Arne Vollan
Comment 4
2020-04-08 09:38:53 PDT
(In reply to Geoffrey Garen from
comment #3
)
> Comment on
attachment 395814
[details]
> Patch > > r=me
Thanks for reviewing!
Aakash Jain
Comment 5
2020-04-08 11:17:41 PDT
fast/sandbox/mac/sandbox-mach-lookup.html seems to be failing on mac-wk2 -PASS internals.hasSandboxMachLookupAccessToGlobalName("com.apple.WebKit.WebContent", "com.apple.lsd.mapdb") is false +FAIL internals.hasSandboxMachLookupAccessToGlobalName("com.apple.WebKit.WebContent", "com.apple.lsd.mapdb") should be false. Was true.
EWS
Comment 6
2020-04-08 11:26:15 PDT
Found 1 new test failure: fast/sandbox/mac/sandbox-mach-lookup.html
Per Arne Vollan
Comment 7
2020-04-08 12:51:02 PDT
Created
attachment 395856
[details]
Patch
EWS
Comment 8
2020-04-08 13:16:04 PDT
Committed
r259753
: <
https://trac.webkit.org/changeset/259753
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 395856
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug